# Cpp-Capstone

./: .gitignore  CMakeLists.txt  README.md
src/: BagTrainer.cpp  BagTrainer.h  ImageContainer.cpp  ImageContainer.h  SVMTrainer.cpp  SVMTrainer.h  ScopeTimer.h  main.cpp  main_old.cpp
